# tedas

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: ACOROC.ipynb  F1ACO.ipynb  Untitled.ipynb
tedas/: __init__.py  dataset.py  features.py  plots.py
tedas/modeling/: predict.py  train.py
