[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tedas"
version = "0.0.1"
description = "meus estudos com a base de dados MIMIC IV"
authors = [
  { name = "William-SWS" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.7"


[tool.ruff]
line-length = 99
src = ["tedas"]
include = ["pyproject.toml", "tedas/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tedas"]
force-sort-within-sections = true

